--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -62,6 +62,7 @@ strong, b {
         background-color: #536f38;
         position: absolute;
         transition: all 0.5s ease;
+        border-radius: 5px;
 }
 .navbar .first{
         top: 30px;
@@ -581,6 +582,11 @@ lg (for laptops and desktops - screens equal to or greater than 1200px wide)*/
     height: 40px;
     margin-right: 3px;
   }
+    
+    .navbar div {
+    height: 3px;
+    width: 30px;
+}
 
 }
 
