--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -619,10 +619,8 @@ lg (for laptops and desktops - screens equal to or greater than 1200px wide)*/
     }*/
 
   button.learn-more {
-    position: relative;
     margin: 10px 5px 20px 20px;
-    padding: 12px;
-    font-size: 10pt;
+    font-size: 16px;
   }
 }
 
