learn more center fix

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -279,17 +279,12 @@ blockquote {
 }
 
  button.learn-more {
-/*
-  border: 2px solid #D8FFF5;
-  background: #D8FFF5;
-*/
+
     padding: 15px;
-    margin: 15px;
+    margin: 15px auto;
     color: #00c0d4;
-    position: relative;
-    left:30%;
-    border: 0;
-    font-size:18px;
+    display: block;
+   
     box-shadow: 5px 5px 5px #99999985;
     border: 1px solid #d4d4d4;
     border-radius: 10px;
