more color tweaks

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -312,7 +312,7 @@ button.learn-more:hover  {
 
 button.bottom-nav {
   border: 0px solid rgb(76, 76, 76);
-  background: #D8FFF5;
+  background: #f2f0ed;
   padding: 18px;
     margin: 20px 0;
     border-radius: 15px;
