--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -332,17 +332,17 @@ button.bottom-nav:hover {
 
 button#lets-chat {
   border: 2px solid #e4fbd4;
-  background: #15868E;
+  background: #222d35;
   padding: 15px;
   margin: 15px;
   color:white;
 }
 
 button#lets-chat:hover {
-  border: 2px solid #15868E;
+  border: 2px solid #222d35;
   background: #f2f0ed;
   transition: 0.5s;
-  color:rgb(76, 76, 76);
+  color:#5b7031;
 }
 
 .bottom-nav-wrapper {
